sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.error
AlgCocktailSort3:29: error: ';' expected but 'if' found.
	} if (!swap) {
          ^